--- a/rdbms/models/.gitattributes
+++ b/rdbms/models/.gitattributes
@@ -14,5 +14,13 @@ database_solution.py filter=git-crypt diff=git-crypt
 posts_solution.py filter=git-crypt diff=git-crypt
 tags_solution.py filter=git-crypt diff=git-crypt
 users_solution.py filter=git-crypt diff=git-crypt
+accounts_solution.py filter=git-crypt diff=git-crypt
+addresses_solution.py filter=git-crypt diff=git-crypt
+education_solution.py filter=git-crypt diff=git-crypt
+employments_solution.py filter=git-crypt diff=git-crypt
+languages_solution.py filter=git-crypt diff=git-crypt
+phone_numbers_solution.py filter=git-crypt diff=git-crypt
+profiles_solution.py filter=git-crypt diff=git-crypt
+vitals_solution.py filter=git-crypt diff=git-crypt
 .gitattributes !filter !diff
 __init__.py !filter !diff
