--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/Users/home/.local/share/virtualenvs/backend-sqlalchemy-introduction-Z-lwZQxk/bin/python"
 }
